--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ dependencies {
         compile 'mysql:mysql-connector-java:6.0.3'
         compile 'org.mybatis:mybatis-spring:1.3.0'
         compile 'org.apache.activemq:activemq-core:5.7.0'
+        compile 'net.sf.ehcache:ehcache-core:2.6.11'
+        compile 'ch.qos.logback:logback-core:1.0.13'
+        compile 'ch.qos.logback:logback-classic:1.0.13'
+        compile 'junit:junit:4.11'
 
 }
 // Embeded Jetty for testing
