增加druid连接池配置，继承mybatis配置

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #mysql settings
-jdbc.user=root
-jdbc.password=Juan365Roobo2016
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://172.17.254.125:3306/ecp_prd?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+user=root
+password=Juan365Roobo2016
+driver=com.mysql.jdbc.Driver
+url=jdbc:mysql://lcoalhost:3306/cas?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
