--- a/build.gradle
+++ b/build.gradle
@@ -22,15 +22,22 @@ task copyJars(type: Copy) {
 }
 dependencies {
         compile 'ch.qos.logback:logback-classic:1.1.3'
+        compile 'org.springframework:spring-core:4.1.6.RELEASE'
+        compile 'org.springframework:spring-beans:4.1.6.RELEASE'
         compile 'org.springframework:spring-orm:4.1.6.RELEASE'
         compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
         compile 'org.springframework:spring-tx:4.1.6.RELEASE'
         compile 'org.springframework:spring-jdbc:4.1.6.RELEASE'
+        compile 'org.springframework:spring-expression:4.1.6.RELEASE'
+        compile 'org.springframework:spring-context:4.1.6.RELEASE'
+        compile 'org.springframework:spring-context-support:4.1.6.RELEASE'
+        compile 'org.springframework:spring-test:4.1.6.RELEASE'
 
         compile 'javax.servlet:jstl:1.2'
         compile 'com.alibaba:druid:1.0.22'
         compile 'mysql:mysql-connector-java:6.0.3'
         compile 'org.mybatis:mybatis-spring:1.3.0'
+        compile 'org.mybatis:mybatis:3.4.1'
         compile 'org.apache.activemq:activemq-core:5.7.0'
         compile 'net.sf.ehcache:ehcache-core:2.6.11'
         compile 'ch.qos.logback:logback-core:1.0.13'
