--- a/build.gradle
+++ b/build.gradle
@@ -21,36 +21,36 @@ task copyJars(type: Copy) {
     into 'lib' // 目标位置
 }
 dependencies {
-        compile 'ch.qos.logback:logback-classic:1.1.3'
-        compile 'org.springframework:spring-core:4.1.6.RELEASE'
-        compile 'org.springframework:spring-beans:4.1.6.RELEASE'
-        compile 'org.springframework:spring-orm:4.1.6.RELEASE'
-        compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
-        compile 'org.springframework:spring-tx:4.1.6.RELEASE'
-        compile 'org.springframework:spring-jdbc:4.1.6.RELEASE'
-        compile 'org.springframework:spring-expression:4.1.6.RELEASE'
-        compile 'org.springframework:spring-context:4.1.6.RELEASE'
-        compile 'org.springframework:spring-context-support:4.1.6.RELEASE'
-        compile 'org.springframework:spring-test:4.1.6.RELEASE'
-        compile 'org.springframework.data:spring-data-neo4j:4.2.0.RELEASE'
-        compile 'org.neo4j:neo4j-ogm-bolt-driver:2.1.1'
+    compile 'ch.qos.logback:logback-classic:1.1.3'
+    compile 'org.springframework:spring-core:4.1.6.RELEASE'
+    compile 'org.springframework:spring-beans:4.1.6.RELEASE'
+    compile 'org.springframework:spring-orm:4.1.6.RELEASE'
+    compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
+    compile 'org.springframework:spring-tx:4.1.6.RELEASE'
+    compile 'org.springframework:spring-jdbc:4.1.6.RELEASE'
+    compile 'org.springframework:spring-expression:4.1.6.RELEASE'
+    compile 'org.springframework:spring-context:4.1.6.RELEASE'
+    compile 'org.springframework:spring-context-support:4.1.6.RELEASE'
+    compile 'org.springframework:spring-test:4.1.6.RELEASE'
+    compile 'org.springframework.data:spring-data-neo4j:4.2.0.RELEASE'
+//    compile 'org.neo4j:neo4j-ogm-bolt-driver:2.1.1'
 
-        compile 'org.neo4j:neo4j-cypher-dsl:1.8'
-        compile 'org.neo4j.driver:neo4j-java-driver:1.1.2'
-        compile 'org.neo4j:neo4j-jdbc-driver:3.0'
+//    compile 'org.neo4j:neo4j-cypher-dsl:1.8'
+//    compile 'org.neo4j.driver:neo4j-java-driver:1.1.2'
+//    compile 'org.neo4j:neo4j-jdbc-driver:3.0'
 
-        compile 'javax.servlet:jstl:1.2'
-        compile 'com.alibaba:druid:1.0.22'
-        compile 'mysql:mysql-connector-java:6.0.3'
-        compile 'org.mybatis:mybatis-spring:1.3.0'
-        compile 'org.mybatis:mybatis:3.4.1'
-        compile 'org.apache.activemq:activemq-core:5.7.0'
-        compile 'net.sf.ehcache:ehcache-core:2.6.11'
-        compile 'ch.qos.logback:logback-core:1.0.13'
-        compile 'ch.qos.logback:logback-classic:1.0.13'
-        compile 'junit:junit:4.11'
+    compile 'javax.servlet:jstl:1.2'
+    compile 'com.alibaba:druid:1.0.22'
+    compile 'mysql:mysql-connector-java:6.0.3'
+    compile 'org.mybatis:mybatis-spring:1.3.0'
+    compile 'org.mybatis:mybatis:3.4.1'
+    compile 'org.apache.activemq:activemq-core:5.7.0'
+    compile 'net.sf.ehcache:ehcache-core:2.6.11'
+    compile 'ch.qos.logback:logback-core:1.0.13'
+    compile 'ch.qos.logback:logback-classic:1.0.13'
+    compile 'junit:junit:4.11'
 
-        compile 'org.mongodb:mongo-java-driver:3.4.1'
+    compile 'org.mongodb:mongo-java-driver:3.4.1'
 
 }
 // Embeded Jetty for testing
